--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Projects</span></a>
+						<a href="#work" class="icon solid fa-folder"><span>Projects </span></a>
 						<a href="#resume" class="icon solid fa-print"><span>Resume</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 					</nav>
@@ -31,12 +31,11 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Maxim Koshel</h1>
-									<p> Computer Science Student</p>
+									<h1 style="color:black;">Maxim Koshel</h1>
+									<p style="color:black;"> Computer Science Student</p>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
 
@@ -44,7 +43,7 @@
 							<article id="resume" class="panel">
 								<header>
 									<h2>Resume</h2>
-									<p>Working on it</p>
+									<p style="color:black;">Working In Progress</p>
 									<p></p>
 								</header>
 							</article>
@@ -61,17 +60,24 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://www.w3schools.com/html/"style="color: #cc0000">Visit our HTML tutorial</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p>google sasdasdasdasdwr erew sd gdfgdsfda sadf zcvsd sdxzaQW   </p>
+											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""><h>Hello</h5></a>
+											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											</a>
 										</div>
 									</div>
 								</section>
@@ -81,8 +87,8 @@
 							<article id="contact" class="panel">
 								<header>
 									<h2>Contact Me</h2>
-									<p>maximkoshel95@gmail.com</p>
-									<p>0544319624</p>
+									<p style="color:black;">maximkoshel95@gmail.com</p>
+									<p style="color:black;">0544319624</p>
 								</header>
 							</article>
 
@@ -91,7 +97,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled.</li><li>Design: <a style="color:white;" href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
