--- a/index.html
+++ b/index.html
@@ -40,17 +40,20 @@
 							</article>
 
 							<!-- Resume -->
-							<article id="resume" class="panel">
+							<article id="resume" class="panel intro">
 								<header>
 									<h2>Resume</h2>
 									<p style="color:black;">Working In Progress</p>
 									<p></p>
 								</header>
+								<a href="#contact" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								</a>
 							</article>
 
 
 						<!-- Work -->
-							<article id="work" class="panel">
+							<article id="work" class="panel intro">
 								<header>
 									<h2>Projects</h2>
 								</header>
@@ -66,25 +69,29 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 15px" >Classic space shooter built with Turtle library</p>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 									</div>
 								</section>
+								<a href="#resume" class="jumplink pic">
+									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+								</a>
+
 							</article>
 
 						<!-- Contact -->
-							<article id="contact" class="panel">
+							<article id="contact" class="panel ">
 								<header>
 									<h2>Contact Me</h2>
 									<p style="color:black;">maximkoshel95@gmail.com</p>
