--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
+											<a href="https://github.com/maximkoshel/python_projects/tree/space-shooter"style="color:black;">Space Shooter</a>
 											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
