--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- Work -->
 							<article id="work" class="panel intro">
 								<header>
-									<h2>Projects</h2>
+									<h1>Projects</h1>
 								</header>
 								<p>
 
@@ -64,25 +64,14 @@
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/maximkoshel/python_projects/tree/space-shooter"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
+											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
+											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:black;">Google Translate</a>
+											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
 											</a>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
-											</a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://www.w3schools.com/html/"style="color:black;">Space Shooter</a>
-											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px" >Classic space shooter built with Turtle library</p>
-											</a>
-										</div>
-									</div>
 								</section>
 								<a href="#resume" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
