--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article id="resume" class="panel intro">
 								<header>
 									<h2>Resume</h2>
-									<p style="color:black;">Working In Progress</p>
+									<p style="color:black;">Work in Progress</p>
 									<p></p>
 								</header>
 								<a href="#contact" class="jumplink pic">
