--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:black;">Google Translate</a>
-											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
+											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5 and Selenium, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
 											</a>
 										</div>
 								</section>
