--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Maxim Koshel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -92,10 +92,6 @@
 
 				<!-- Footer -->
 					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a style="color:white;" href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
 
 			</div>
 
