added brick breaker

--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/maximkoshel/python_projects/tree/space-shooter"style="color:black;">Space Shooter</a>
+											<a href="https://github.com/maximkoshel/brick_breaker"style="color:blue;">Brick Breaker</a>
+											<a  class="image fit"><img src="images/brick_breaker.gif" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Classic brick breaker built with Pygame library</p>
+											</a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/maximkoshel/python_projects/tree/space-shooter"style="color:blue;">Space Shooter</a>
 											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Classic space shooter built with Turtle library</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:black;">Google Translate</a>
+											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:blue;">Google Translate</a>
 											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5 and Selenium, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
 											</a>
 										</div>
