table to resume

--- a/index.html
+++ b/index.html
@@ -43,7 +43,20 @@
 							<article id="resume" class="panel intro">
 								<header>
 									<h2>Resume</h2>
-									<p style="color:black;">Work in Progress</p>
+									<p style="color:black;"><pre>Work in Progress</pre>
+										<pre></pre>
+										<table style="width:100%">
+										  <tr>
+										    <th style="color:black;">ממצוע שכבתי</th>
+										    <th style="color:black;">ציון</th>
+										    <th style="color:black;">מקצוע</th>
+										  </tr>
+										  <tr>
+										    <td style="text-align:center">72</td>
+										    <td style="text-align:center" >82</td>
+										    <td style="text-align:center" >מתמטיקה בדידה</td>
+										  </tr>
+										</table></p>
 									<p></p>
 								</header>
 								<a href="#contact" class="jumplink pic">
