--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 								<header>
 									<h1 style="color:black;">Maxim Koshel</h1>
 									<p style="color:black;"> Computer Science Student</p>
+									<ul class="icons">
+											<a href="https://github.com/maximkoshel" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></ul>
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
 								</a>
+
 							</article>
 
 							<!-- Resume -->
@@ -47,7 +50,7 @@
 										<pre></pre>
 										<table style="width:100%">
 										  <tr>
-										    <th style="color:black;">ממצוע שכבתי</th>
+										    <th style="color:black;">ממוצע שכבתי</th>
 										    <th style="color:black;">ציון</th>
 										    <th style="color:black;">מקצוע</th>
 										  </tr>
