--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
 										<pre></pre>
 										<table style="width:100%">
 										  <tr>
-										    <th style="color:black;">ממוצע שכבתי</th>
 										    <th style="color:black;">ציון</th>
 										    <th style="color:black;">מקצוע</th>
 										  </tr>
 										  <tr>
-										    <td style="text-align:center">72</td>
 										    <td style="text-align:center" >82</td>
 										    <td style="text-align:center" >מתמטיקה בדידה</td>
 										  </tr>
+											<tr>
+												<td style="text-align:center" ></td>
+												<td style="text-align:center" ></td>
+											</tr>
 										</table></p>
 									<p></p>
 								</header>
