--- a/index.html
+++ b/index.html
@@ -53,11 +53,60 @@
 										    <th style="color:black;">ציון</th>
 										    <th style="color:black;">מקצוע</th>
 										  </tr>
+											<tr>
+												<td style="text-align:center" >97</td>
+												<td style="text-align:center" >מבוא למדעי המחשב</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >84</td>
+												<td style="text-align:center" >סדנה מתקדמת בתכנות</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >81</td>
+												<td style="text-align:center" >מבני נתונים</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >75</td>
+												<td style="text-align:center" >מבנה מחשבים ותורת המיתוג</td>
+											</tr>
+											<tr>
+											<td style="text-align:center" >--</td>
+											<td style="text-align:center" >-------------------</td>
+										</tr>
+											<tr>
+												<td style="text-align:center" >87</td>
+												<td style="text-align:center" >חשבון אינפיניטסימלי 1</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >90</td>
+												<td style="text-align:center" >חשבון אינפיניטסימלי 2</td>
+											</tr>
+											<tr>
 										  <tr>
 										    <td style="text-align:center" >82</td>
 										    <td style="text-align:center" >מתמטיקה בדידה</td>
 										  </tr>
 											<tr>
+												<td style="text-align:center" >75</td>
+												<td style="text-align:center" >אלגברה לינארית</td>
+											</tr>
+
+											<tr>
+												<td style="text-align:center" >60</td>
+												<td style="text-align:center" >הסתברות</td>
+											</tr>
+											<td style="text-align:center" >--</td>
+											<td style="text-align:center" >-------------------</td>
+										</tr>
+												<tr>
+													<td style="text-align:center" >92</td>
+													<td style="text-align:center" >אתגרי מחשבה בפילוסופיה</td>
+												</tr>
+												<tr>
+													<td style="text-align:center" >95</td>
+													<td style="text-align:center" >פילוסופיה וקולנוע</td>
+												</tr>
+												<tr>
 												<td style="text-align:center" ></td>
 												<td style="text-align:center" ></td>
 											</tr>
