--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 									<h2>Resume</h2>
 									<p style="color:black;"><pre>Work in Progress</pre>
 										<pre></pre>
+											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel" target="_blank"<i class="fas fa-user-graduate"></i><span class="panel intro">Grades.pdf</span></a></span></h2>
+
+										</header>
 										<table style="width:100%">
 										  <tr>
 										    <th style="color:black;">ציון</th>
