fixed url for grades

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<h2>Resume</h2>
 									<p style="color:black;"><pre>Work in Progress</pre>
 										<pre></pre>
-											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel" target="_blank"<i class="fas fa-user-graduate"></i><span class="panel intro">Grades.pdf</span></a></span></h2>
+											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel/web/blob/master/grades.pdf" target="_blank"<i class="fas fa-user-graduate"></i><span class="panel intro">Grades.pdf</span></a></span></h2>
 
 										</header>
 										<table style="width:100%">
