added grades menu

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
 						<a href="#work" class="icon solid fa-folder"><span>Projects </span></a>
 						<a href="#resume" class="icon solid fa-print"><span>Resume</span></a>
+						<a href="#grades" class="icon solid fa-user-graduate"><span>Grades</span></a>
 						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
 					</nav>
 
@@ -42,13 +43,30 @@
 
 							</article>
 
-							<!-- Resume -->
-							<article id="resume" class="panel intro">
+							<!-- Reusme -->
+								<article id="resume" class="panel intro">
+									<header>
+											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel/web/blob/master/resume.pdf" target="_blank"<span class="panel intro">Resume.pdf</span></a></span></h2>
+											 <br/>
+											<div class="row">
+												<div class="">
+													<a  class="image fit"><img src="images/resume_picture.JPG" alt="">
+													</a>
+												</div>
+									</header>
+									<a href="#grades" class="jumplink pic">
+										<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+									</a>
+
+								</article>
+
+							<!-- Grades -->
+							<article id="grades" class="panel intro">
 								<header>
-									<h2>Resume</h2>
-									<p style="color:black;"><pre>Work in Progress</pre>
+									<h2></h2>
+									<p style="color:black;"><pre></pre>
 										<pre></pre>
-											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel/web/blob/master/grades.pdf" target="_blank"<i class="fas fa-user-graduate"></i><span class="panel intro">Grades.pdf</span></a></span></h2>
+											<h2 style="text-align:center"><span class="icons"><a href="https://github.com/maximkoshel/web/blob/master/grades.pdf" target="_blank"<span class="panel intro">Grades.pdf</span></a></span></h2>
 
 										</header>
 										<table style="width:100%">
@@ -165,6 +183,8 @@
 							</article>
 
 					</div>
+
+
 
 				<!-- Footer -->
 					<div id="footer">
