added linkeding and kaggle icon

--- a/index.html
+++ b/index.html
@@ -35,7 +35,12 @@
 									<h1 style="color:black;">Maxim Koshel</h1>
 									<p style="color:black;"> Computer Science Student</p>
 									<ul class="icons">
-											<a href="https://github.com/maximkoshel" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></ul>
+											<a href="https://github.com/maximkoshel" target="_blank" class="icon brands fa-github fa-lg" style="color:blue"><span class="label" >GitHub</span>
+												<a style="color: #ffffff00">__</a>
+											<a href="https://www.linkedin.com/in/maxim-koshel-00a981197" target="_blank" class="icon brands fa-linkedin fa-lg" style="color:blue"><span class="label">linkedin</span>
+												<a style="color: #ffffff00">__</a>
+											<a href="https://www.kaggle.com/maximkoshel" target="_blank" class="icon brands fa-kaggle fa-lg" style="color:blue"><span class="label" >Kaggle</span></a></ul>
+
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
