--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE HTML>
 <!--
+
+	!!!!
+	If you are looking into the code, don't, it was my first attempt at building
+	 something with HTML
+	!!!
+
+
 	Astral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -88,6 +95,38 @@
 												<td style="text-align:center" >סדנה מתקדמת בתכנות</td>
 											</tr>
 											<tr>
+												<td style="text-align:center" >83</td>
+												<td style="text-align:center" >ארגון המחשב ושפת סף</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >91</td>
+												<td style="text-align:center" >מערכות בסיסי נתונים</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >84</td>
+												<td style="text-align:center" >תכנות מונחה עצמים</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >96</td>
+												<td style="text-align:center" >מערכות הפעלה</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >82</td>
+												<td style="text-align:center" >תכנון וניתוח אלגוריתמים</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >99</td>
+												<td style="text-align:center" >רשתות תקשורת מחשבים</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >83</td>
+												<td style="text-align:center" >הנדת תוכנה</td>
+											</tr>
+											<tr>
+												<td style="text-align:center" >86</td>
+												<td style="text-align:center" >עיבוד תמונות למדעי המחשב</td>
+											</tr>
+											<tr>
 												<td style="text-align:center" >81</td>
 												<td style="text-align:center" >מבני נתונים</td>
 											</tr>
@@ -111,6 +150,10 @@
 										  <tr>
 										    <td style="text-align:center" >82</td>
 										    <td style="text-align:center" >מתמטיקה בדידה</td>
+										  </tr>
+										  <tr>
+										    <td style="text-align:center" >80</td>
+										    <td style="text-align:center" >תורת הגרפים</td>
 										  </tr>
 											<tr>
 												<td style="text-align:center" >75</td>
@@ -155,14 +198,20 @@
 								</p>
 								<section>
 									<div class="row">
+
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/maximkoshel/DeepLearningCourse/tree/master/Titanic"style="color:blue;">ANN-Titanic Kaggle challange</a>
-											<a  class="image fit"><img src="images/titanic.JPG" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Used artificial neural network to predict titanic survival rate on Kaggle's titanic challange. Score: 0.78468 <a href="https://www.kaggle.com/maximkoshel"style="color:blue;">My Kaggle page</a></p>
+											<a href="https://github.com/maximkoshel/AeroMax-webstie"style="color:blue;">AeroMax - Website</a>
+											<a  class="image fit"><img src="images/Aero.JPG" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" ><a href="https://maximkoshel.github.io/AeroMax-webstie/"style="color:blue;">AeroMax</a><tr></tr> - Full functioning website using only HTML, Javascript and advanced CSS</p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:blue;">Google Translate</a>
-											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5 and Selenium, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
+											<a href="https://github.com/maximkoshel/IDoctor"style="color:blue;">IDoctor</a>
+											<a  class="image fit"><img src="images/Idoctor.JPG" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" ><a href="https://youtu.be/Ix-lXqEWK8s"style="color:blue;">IDoctor</a> is a Java driven project with online MySQL database for patients and doctors to communicate, write prescriptions, make an appointments and more.</p>
+											</a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/maximkoshel/DeepLearningCourse/tree/master/Titanic"style="color:blue;">ANN-Titanic Kaggle challange</a>
+											<a  class="image fit"><img src="images/titanic.JPG" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Using artificial neural network to predict titanic survival rate on Kaggle's titanic challange. Score: 0.78468 <a href="https://www.kaggle.com/maximkoshel"style="color:blue;">My Kaggle page</a></p>
 											</a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -170,7 +219,12 @@
 											<a  class="image fit"><img src="images/brick_breaker.gif" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Classic brick breaker built with Pygame library</p>
 											</a>
 										</div>
-
+										<div class="col-4 col-6-medium col-12-small">
+											<a href="https://github.com/maximkoshel/python_projects/tree/google_translate"style="color:blue;">Google Translate</a>
+											<a  class="image fit"><img src="images/pic02.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >My first project with PyQt5 and Selenium, automaticlly detects the language (Hebrew, Russian, English) and translate accordingly, uses selenium library to open google's translate website to see more options.</p>
+											</a>
+										</div>
+										
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://github.com/maximkoshel/python_projects/tree/space-shooter"style="color:blue;">Space Shooter</a>
 											<a  class="image fit"><img src="images/pic01.jpg" alt=""><p style="color:black; font-size: 18px;line-height: 1.6" >Classic space shooter built with Turtle library</p>
